--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "http://ashwaghosh.github.io/anupPhotoGallery",
   "name": "anup-photo-gallery",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@material-ui/core": "^4.10.0",
     "@testing-library/jest-dom": "^4.2.4",
