--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ashwaghosh.github.io/anupPhotoGallery",
+  "homepage": "http://ashwaghosh.github.io/anup-photo-gallery",
   "name": "anup-photo-gallery",
   "version": "0.1.0",
   "private": false,
